gh_pages/css/style-dev.css
/* ... */
section.about {
    background-color: var(--very-light-gray);

    display: flex;
    flex-direction: column;
    align-items: center;

    padding: 50px;
    box-sizing: border-box;

    width: 100%;

    article:first-child {
        margin-top: 0;
    }

    article {
        display: flex;
        justify-content: space-around;
        align-items: center;

        margin: 75px 40px 0;

        width: 100%;

        gap: 40px;

        figure {
            margin: 0;

            font-size: 1.15rem;

            h2 {
                font-size: 2rem;
                margin-bottom: 20px;
                margin-top: 0;
            }
        }

        .code-wrapper {
            margin-top: 0;

            code {
                .button-tooltip {
                    top: -10px;
                }
            }
        }
    }
}

section.blocks {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    gap: 30px;

    margin-top: 60px;

    article {
        display: flex;
        flex-direction: column;
        justify-content: space-between;

        width: 45%;
        min-width: 300px;

        padding: 10px;

        /* border: solid 2px var(--blue); */
        /* border-radius: 10px; */

        h2 {
            font-size: 2rem;
            margin-bottom: 5px;
        }

        p {
            font-size: 1rem;
            line-height: 1.3;
        }

        p:last-of-type {
            margin-bottom: 20px;
        }

        .buttons {
            display: flex;
            gap: 20px;

            a {
                transition: color var(--trans-duration), background-color var(--trans-duration);

                display: block;
                padding: 7px;
                border: solid var(--blue) 2px;
                border-radius: 4px;

                text-decoration: none;
            }

            a,
            a:link {
                border-color: var(--pink);
                color: var(--pink);
            }

            a:hover,
            a:active {
                background-color: var(--pink);
                color: var(--white);
            }
        }
    }
}

section.example {
    padding: 50px;
    margin: 0 auto;
    margin-top: 110px;

    background-color: var(--very-light-gray);

    max-width: 800px;

    h2 {
        margin-top: 0;
        margin-bottom: 25px;

        font-size: 2rem;
    }

    p {
        margin-top: 0;
        margin-bottom: 50px;
    }

    code.inline {
        background-color: var(--light-gray);
    }

    .code-wrapper {
        margin: 0 auto;
    }
}

section.credits {
    margin-top: 40px;

    h2 {
        margin-top: 0;
        margin-bottom: 10px;

        font-size: 2rem;
    }
}

footer, deduce-footer {
    display: flex;
    justify-content: space-between;

    margin-top: 150px;
    border-top: solid 2px var(--blue);
    padding: 30px 0 50px;

    .nav-logo {
        margin-right: 50px;

        svg {
            * {
                transition: fill var(--trans-duration);
            }

            width: var(--logo-width);
            height: calc(var(--logo-width) * 402 / 1668);
        }
    }

    /* Invert colors on hover */
    .nav-logo:hover {
        svg .blue {
            fill: var(--purple);
        }

        svg .purple {
            fill: var(--blue);
        }
    }

    .footer-links {
        display: flex;
        gap: 75px;
        flex-wrap: wrap;

        .footer-col {
            display: flex;
            flex-direction: column;
            gap: 10px;

            font-family: 'Inter', sans-serif;

            a:first-child,
            a:link:first-child {
                font-weight: bold;
                text-transform: uppercase;
            }

            a,
            a:link {
                display: block;

                text-decoration: none;
                color: var(--blue);
            }

            a:hover,
            a:active {
                text-decoration: underline;
                /* color: var(--purple); */
            }
        }
    }
}

table {
    margin-top: 30px;
    border-collapse: collapse;

    tr {
        th {
            text-align: center;
        }

        th,
        td {
            margin: 0;
            padding: 10px 15px;
            border: solid var(--light-gray) 1px;
        }
    }

    tr:nth-child(even) {
        background-color: var(--very-lighter-gray);
    }
}


.cheat-sheet{
    ol {
        li {
            line-height: 1.5;
        }
    }
    
    table {
        margin-top: 50px;
    }
}


.md{
    h2:first-of-type {
        margin-top: 40px;
    }

    .code-wrapper {
        margin-top: 20px;
        margin-bottom: 20px;
    }
}
/* ... */

